<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/mHeaderView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <LinearLayout
        android:id="@+id/lLTabularDataHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_layout_height_45dp"
        android:layout_below="@+id/mHeaderView"
        android:orientation="horizontal"
        android:weightSum="3.1">

        <View
            android:layout_width="@dimen/view_height_1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="@dimen/layout_widht_0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".3">

                <TextView
                    android:id="@+id/mTvSerialNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/strSerialNumberCaption"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/view_height_1dp"
                android:background="@color/black" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".3">

                <TextView
                    android:id="@+id/mTvDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/strDateCaption"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/view_height_1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:id="@+id/rLTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/mTvTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/margin_5dp"
                android:gravity="top"
                android:text="@string/strTimeCaption"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/mTvTemperature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/strTemperatureCaption"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="@dimen/view_height_1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="@dimen/layout_widht_0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/mTvLight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/strLightCaption"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/mTvTamper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/strTamperCaption"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5">

            <TextView
                android:id="@+id/mTvBatteryLife"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/strBatteryCaption"
                android:textAlignment="center"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height_1dp"
        android:layout_below="@+id/lLTabularDataHeader"
        android:background="@color/black" />
</RelativeLayout>