<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header_multi_heading" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_margin="@dimen/margin_20dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/lLDeviceNameInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_device_name" />

            <TextView
                android:id="@+id/mTvDeviceName"
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLDeviceMacInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lLDeviceNameInfo"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_device_mac_address" />

            <TextView
                android:id="@+id/mTvDeviceMacAddress"
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLDeviceModelNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lLDeviceMacInfo"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_model_number" />

            <TextView
                android:id="@+id/mTvDeviceModelNumber"
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLDeviceFirmwareVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lLDeviceModelNo"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_device_firmware_version" />

            <TextView
                android:id="@+id/mTvDeviceFirmwareVersion"
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lLAppVersionNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lLDeviceFirmwareVersion"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_app_version" />

            <TextView
                android:id="@+id/mTvAppVersion"
                style="@style/TextView_size_17sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>